--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -7,7 +7,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container-fluid bg-info text-light">
+    <div class="container-fluid">
     {% block content %}
 
     {% endblock %}
